# rpg_world

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  __init__.py  channels.json  conftest.py  hook.py  launcher.py  llm.yaml  models.py  pyproject.toml  pytest.ini  run.py  run_agent.py  run_all.py  run_api.py  run_cli.py  run_dashboard_api.py  run_dream.py  run_llm.py  run_media.py  run_play_api.py  run_telegram.py  run_tts.py  settings.json  settings.local.example.yaml  settings.yaml
.github/workflows/: backend-integration.yml
agent/: __init__.py  agent.py  cli.py
agent_service/: __init__.py  client.py  derivation_notifications.py  derivation_worker.py  main.py  play_event_notifications.py  schemas.py  settings.py  settings.yaml
agent_service/tests/: test_client.py  test_composer_schema.py  test_contracts.py  test_play_event_notifications.py  test_session_derivation.py  test_settings.py
api/: deps.py  logger.py  main.py  run_dev.sh  schemas.py  settings.json  settings.py
api/routers/: character.py  chat.py  context.py  lorebook.py  milestone.py  sessions.py  status.py  workspace.py
api/tests/: conftest.py  test_contracts.py
channels/: __init__.py  base.py  channels.json  config.py  runner.py  settings.local.example.yaml  settings.yaml
channels/cli/: __init__.py  adapter.py  repl.py
channels/telegram/: __init__.py  action_registry.py  adapter.py  play_flow.py  render.py  runner.py  session_flow.py  turn_flow.py
channels/tests/: conftest.py  test_base.py  test_cli.py  test_cli_repl.py  test_config.py  test_manager.py  test_process_supervisor.py  test_telegram.py  test_telegram_action_registry.py  test_telegram_multi_bot.py  test_telegram_runner.py  test_telegram_turn_flow.py
commons/: __init__.py  dream_identity.py  errors.py  process_logging.py  scene_time.py  settings.py  text_identity.py  types.py
commons/tests/: test_scene_time.py
dashboard_api/: deps.py  logger.py  main.py  schemas.py  settings.json  settings.py  settings.yaml
dashboard_api/routers/: __init__.py  character.py  chat.py  lorebook.py  sessions.py  status.py  workspace.py
dashboard_api/tests/: conftest.py  test_contracts.py
dashboard_webui/: index.html  package-lock.json  run_dev.sh  settings.json  vite.config.js
data/character/: alice.json  bob.json  eve.json
data/lorebook/: magic_system.json
data/非公开行程/: persistent_memory.md
docs/: agent-turn-orchestration.md  backend-integration-matrix.md  rpg-data-architecture.md  telegram_stability_iteration_plan.md
docs/benchmarks/: README.md  rp-memory-recall-history.md
dream_service/: __init__.py  client.py  contracts.py  main.py  notifications.py  play_event_notifications.py  repository.py  runtime.py  schemas.py  settings.py  settings.yaml  worker.py
dream_service/tests/: test_client.py  test_main.py  test_play_event_notifications.py  test_repository.py  test_runtime.py  test_settings.py  test_worker.py
llama_service/: __init__.py  client.py  llm.yaml  models.py  protocol.py  server.py
llama_service/tests/: __init__.py  test_llama_service.py
llm_client/: __init__.py  auth.py  client.py  codec.py  keys.py  manager.py  provider.py  types.py
llm_service/: __init__.py  base_provider.py  client.py  config.py  errors.py  keys.py  llama_provider.py  llm.yaml  main.py  manager.py  models.py  openai_provider.py  openai_speech.py  pointwise.py  protocol.py  runtime.py  schemas.py  server.py  settings.py  settings.yaml  types.py
llm_service/tests/: __init__.py  test_http_client.py  test_llm_service.py  test_manager.py  test_openai_speech.py
media_service/: __init__.py  client.py  main.py  schemas.py  settings.py  settings.yaml  worker.py
media_service/tests/: __init__.py  test_client.py  test_contracts.py  test_worker.py
play_api/: TODO.md  __init__.py  agent_client.py  backend.py  composition.py  delete_tokens.py  dream_client.py  event_hub.py  main.py  media_client.py  mock_data.py  settings.py  settings.yaml  sse_protocol.py  tts_client.py
play_api/backends/: __init__.py  agent.py  base.py  data_manager.py  factory.py  mock.py
play_api/routers/: __init__.py  _locator.py  characters.py  chat.py  commands.py  dream.py  events.py  lorebook.py  main_llm.py  media.py  narrative_outcome.py  ops.py  plot_scheduling.py  rp_modules.py  scene.py  session_composer.py  sessions.py  status_tables.py  tts.py  workspace.py
play_api/tests/: __init__.py  test_agent_error_mapping.py  test_contracts.py  test_data_manager_backend.py  test_dream.py  test_events.py  (+6 more)
play_events/: __init__.py  auth.py  contracts.py  publisher.py
play_webui/: .env.example  .gitignore  README.md  next.config.ts  package-lock.json  package.json  play_webui.config.json  tailwind.config.ts
rp_memory/: __init__.py  bigram_tokenizer.py  candidate.py  chunker.py  keyword_tokenizer.py  memory_manager.py  memory_types.py  persist_memory.py  recall_query.py  recalled_memory.py  run.py  story_memory.py  story_memory_service.py  vector_index_manager.py
rpg_core/: character.py  common_types.py  constants.py  lorebook.py  main_llm.py  rp_module_constants.py  settings.py  settings.yaml  turns.py  utils.py
rpg_data/: __init__.py  bootstrap.py  db.py  errors.py  models.py  orm.py  plot_models.py  settings.py  story_template.py  transaction.py
rpg_media/: __init__.py  background_agent.py  brief.py  errors.py  facade.py  image_store.py  metadata.py  service.py  settings.py  settings.yaml  source.py  structured_output.py  types.py
rpg_tts/: __init__.py  audio_store.py  errors.py  facade.py  service.py  settings.py  settings.yaml  text.py
tests/: __init__.py
todos/: agentic_memory_story_memory_v2_plan.md  data_module_mvp_plan.md  history_crud_plan.md  main_llm_switching_phase2.md  pulse_agent_plan.md  rp_modules_plan.md  rpg_data_dream_memory_boundary_refactor_plan.md  rpg_data_service_boundary_refactor_plan.md  skill_support_plan.md  telegram_webui_play_parity_plan.md  webui_product_requirements.md
tts_service/: __init__.py  client.py  main.py  schemas.py  settings.py  settings.yaml  worker.py
webui/: package-lock.json  package.json  vite.config.js
(+867 files in other folders)
