[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rpg-world"
version = "0.1.0"
description = "RPG World backend, channels, and agent runtime."
readme = "AGENTS.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "httpx>=0.27",
    "jieba>=0.42.1",
    "jinja2>=3.1",
    "loguru>=0.7",
    "openai>=1.0",
    "prompt-toolkit>=3.0",
    "pydantic>=2.0",
    "python-telegram-bot>=21.0",
    "pyyaml>=6.0",
    "rich>=13.0",
    "sqlite-vec>=0.1.6",
    "tiktoken>=0.7",
    "uvicorn[standard]>=0.27",
    "watchdog>=4.0",
]

[project.optional-dependencies]
llama = [
    "llama-cpp-python>=0.2.90",
]
all = [
    "rpg-world[llama]",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[project.scripts]
rpg-world-agent = "run_agent:main"
rpg-world-dashboard-api = "run_dashboard_api:main"
rpg-world-play-api = "run_play_api:main"
rpg-world-cli = "run_cli:cli"
rpg-world-telegram = "run_telegram:cli"

[tool.setuptools]
py-modules = [
    "run_agent",
    "run_dashboard_api",
    "run_cli",
    "run_play_api",
    "run_telegram",
]

[tool.setuptools.packages.find]
where = ["."]
include = [
    "dashboard_api*",
    "agent_service*",
    "channels*",
    "play_api*",
    "rpg_core*",
    "rp_memory*",
    "llama_service*",
]
exclude = [
    "data*",
    "dashboard_webui*",
    "play_webui*",
    "todos*",
]

[tool.setuptools.package-data]
dashboard_api = ["*.json"]
rpg_core = ["jinja/**/*.jinja"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "integration: tests that require INTEGRATION_TEST=1 and may call real LLM APIs",
]
