[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rpg-world"
version = "0.1.0"
description = "RPG World backend, channels, and agent runtime."
readme = "AGENTS.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "httpx>=0.27",
    "jieba>=0.42.1",
    "jinja2>=3.1",
    "loguru>=0.7",
    "openai>=1.0",
    "peewee>=3.17",
    "prompt-toolkit>=3.0",
    "pydantic>=2.0",
    "python-multipart>=0.0.18",
    "python-telegram-bot>=21.0",
    "pyyaml>=6.0",
    "rich>=13.0",
    "sqlite-vec>=0.1.6",
    "tiktoken>=0.7",
    "typing-extensions>=4.12",
    "uvicorn[standard]>=0.27",
    "watchdog>=4.0",
]

[project.optional-dependencies]
llama = [
    "llama-cpp-python>=0.2.90",
]
all = [
    "rpg-world[llama]",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[project.scripts]
rpg-world-agent = "run_agent:main"
rpg-world-llm = "run_llm:main"
rpg-world-play-api = "run_play_api:main"
rpg-world-media = "run_media:main"
rpg-world-tts = "run_tts:main"
rpg-world-up = "run_all:main"
rpg-world-cli = "run_cli:cli"
rpg-world-telegram = "run_telegram:cli"

[tool.setuptools]
py-modules = [
    "run_agent",
    "run_llm",
    "run_all",
    "run_cli",
    "run_play_api",
    "run_media",
    "run_tts",
    "run_telegram",
]

[tool.setuptools.packages.find]
where = ["."]
include = [
    "commons*",
    "agent_service*",
    "channels*",
    "play_api*",
    "media_service*",
    "tts_service*",
    "rpg_tts*",
    "rpg_core*",
    "rpg_data*",
    "rpg_media*",
    "rp_memory*",
    "llm_service*",
    "llm_client*",
]
exclude = [
    "data*",
    "play_webui*",
    "todos*",
]

[tool.setuptools.package-data]
rpg_core = ["jinja/**/*.jinja"]
rpg_data = ["migrations/*.sql"]
rpg_media = ["settings.yaml"]
media_service = ["settings.yaml"]
tts_service = ["settings.yaml"]
rpg_tts = ["settings.yaml"]
llm_service = ["settings.yaml", "llm.yaml"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "integration: backend integration tests gated by INTEGRATION_TEST=1",
    "service_integration: cross-process HTTP integration tests gated by SERVICE_INTEGRATION_TEST=1",
    "live_llm: opt-in real-provider smoke tests gated by LIVE_LLM_TEST=1",
]
